@@ -26,11 +26,15 @@ class TestNewsRssListing(FunctionalTestCase):
 
         view = news_folder.unrestrictedTraverse('news_listing_rss')
         view.max_items = 200
-
         self.assertEqual(2, len(view.get_items()))
-
         view.max_items = 1
+        self.assertEqual(1, len(view.get_items()))
 
+        # Same test but with the view from "ftw.contentpage" for backward compatibility.
+        view = news_folder.unrestrictedTraverse('news_rss_listing')
+        view.max_items = 200
+        self.assertEqual(2, len(view.get_items()))
+        view.max_items = 1
         self.assertEqual(1, len(view.get_items()))
 
     @browsing
@@ -38,6 +42,15 @@ class TestNewsRssListing(FunctionalTestCase):
         news_folder = create(Builder('news folder'))
 
         browser.login().visit(news_folder, view='news_listing_rss')
+
+        self.assertIn(
+            '<link>{0}</link>'.format(news_folder.absolute_url()),
+            browser.contents,
+            'Did not found the link tag of the channel'
+        )
+
+        # Same test but with the view from "ftw.contentpage" for backward compatibility.
+        browser.login().visit(news_folder, view='news_rss_listing')
 
         self.assertIn(
             '<link>{0}</link>'.format(news_folder.absolute_url()),
@@ -63,6 +76,17 @@ class TestNewsRssListing(FunctionalTestCase):
         self.assertIn(link, browser.contents,
                       'Did not found the link tag for the news')
 
+        # Same test but with the view from "ftw.contentpage" for backward compatibility.
+        browser.login().visit(news_folder, view='news_rss_listing')
+
+        rdf = '<rdf:li rdf:resource="{0}"'.format(news.absolute_url())
+        self.assertIn(rdf, browser.contents,
+                      'Did not found the rdf tag for the news')
+
+        link = '<link>{0}</link>'.format(news.absolute_url())
+        self.assertIn(link, browser.contents,
+                      'Did not found the link tag for the news')
+
     @browsing
     def test_news_item_contains_pubdate(self, browser):
         news_folder = create(Builder('news folder'))
@@ -72,6 +96,21 @@ class TestNewsRssListing(FunctionalTestCase):
                       .having(news_date=datetime(2000, 12, 31, 15, 0, 0)))
 
         browser.login().visit(news_folder, view='news_listing_rss')
+
+        # Use HTML parser so that we have no XML namespaces.
+        browser.parse_as_html()
+
+        self.assertEqual(
+            # Difference between "%e" and "%-e":
+            # %e has a leading space on single numbers - that's why the tests
+            # were failing between the 1st and the 9th every month :-)
+            # %-e Removes the leading space - only works on unix machines.
+            news.news_date.strftime('%a, %-e %b %Y %H:%M:%S %z').strip(),
+            browser.css('rdf item pubDate').first.text
+        )
+
+        # Same test but with the view from "ftw.contentpage" for backward compatibility.
+        browser.login().visit(news_folder, view='news_rss_listing')
 
         # Use HTML parser so that we have no XML namespaces.
         browser.parse_as_html()
